--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<body background="background.jpg">
-		<ul style="list-style-type:none">
-			<li>
-				<a href="https://vk.com/mariar_make"><img border="0" src="VK.png" width="100" height="100"></a>
-			</li>
-
-			<li>
-				<a href="https://vk.com/mariar_make"><img border="0" src="whatsapp.png" width="100" height="100"></a>
-			</li>
-			<li>
-				<a href="https://vk.com/mariar_make"><img border="0" src="Telegram.png" width="100" height="100"></a>
-			</li>
-		</ul>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style\style.css"/>
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		<div class="container">
+			<div class="layer">
+				<div class="user-info">
+					<p>Выберите удобный для вас способ связи</p>
+				</div>
+				<div class="button-list" >
+					<a href="https://vk.com/mariar_make"><img src="images\VK.svg" ><span>VK</span></a>
+					<a href="api.whatsapp.com/send?phone=79678008486"><img src="images\whatsapp.svg" ><span>Whatsapp</span></a>
+					<a href="tg://resolve?domain=mariar_brows"><img src="images\Telegram.svg" ><span>Telegram</span></a>
+					<a href="viber://add?number=79678008486"><img src="images\Viber.png" ><span>Viber</span></a>					
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
