Fixed image names

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 				<p>Выберите удобный для вас способ связи</p>
 			</div>
 			<div class="button-list" >
-				<a href="https://vk.com/mariar_make"><img src="images\VK.svg" ><span>VK</span></a>
+				<a href="https://vk.com/mariar_make"><img src="images\vk.svg" ><span>VK</span></a>
 				<a href="api.whatsapp.com/send?phone=79678008486"><img src="images\whatsapp.svg" ><span>Whatsapp</span></a>
-				<a href="tg://resolve?domain=mariar_brows"><img src="images\Telegram.svg" ><span>Telegram</span></a>
-				<a href="viber://add?number=79678008486"><img src="images\Viber.png" ><span>Viber</span></a>					
+				<a href="tg://resolve?domain=mariar_brows"><img src="images\telegram.svg" ><span>Telegram</span></a>
+				<a href="viber://add?number=79678008486"><img src="images\viber.png" ><span>Viber</span></a>					
 			</div>
 		</div>
 	</body>
