--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			</div>
 			<div class="button-list" >
 				<a href="https://vk.com/mariar_make"><img src="images\vk.svg" ><span>VK</span></a>
-				<a href="api.whatsapp.com/send?phone=79678008486"><img src="images\whatsapp.svg" ><span>Whatsapp</span></a>
+				<a href="whatsapp://send?phone=79678008486"><img src="images\whatsapp.svg" ><span>Whatsapp</span></a>
 				<a href="tg://resolve?domain=mariar_brows"><img src="images\telegram.svg" ><span>Telegram</span></a>
-				<a href="viber://add?number=79678008486"><img src="images\viber.png" ><span>Viber</span></a>					
+				<a href="viber://chat?number=79678008486"><img src="images\viber.png" ><span>Viber</span></a>					
 			</div>
 		</div>
 	</body>
