Separate boxes for user info and button items. Vector imgs were added. Telephone refference

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 				<p>Выберите удобный для вас способ связи</p>
 			</div>
 			<div class="button-list" >
+				<a href="tel:+79678008486"><img src="images\telephone.svg" ><span>По телефону</span></a>
 				<a href="https://vk.com/mariar_make"><img src="images\vk.svg" ><span>VK</span></a>
 				<a href="whatsapp://send?phone=79678008486"><img src="images\whatsapp.svg" ><span>Whatsapp</span></a>
 				<a href="tg://resolve?domain=mariar_brows"><img src="images\telegram.svg" ><span>Telegram</span></a>
-				<a href="viber://chat?number=79678008486"><img src="images\viber.png" ><span>Viber</span></a>					
+				<a href="viber://chat?number=79678008486"><img src="images\viber.svg" ><span>Viber</span></a>			
 			</div>
 		</div>
 	</body>
